# top-framework

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: Makefile
docs/source/: conf.py  data-structure.rst  design-goals.rst  development.rst  index.rst  redis.rst  rest.rst  security.rst  tests.rst  troubleshooting.rst  webtop.rst
docs/source/_templates/: page.html
docs/source/reference/: index.rst
docs/source/reference/api/: top.core.encoding.decode_date.rst  top.core.encoding.encode_date.rst  top.core.encoding.rst  top.core.rst  top.core.task.Task.rst  top.core.task.rst  top.core.tracker.Tracker.rst  top.core.tracker.rst  top.gunicorn.hooks.post_request.rst  top.gunicorn.hooks.pre_request.rst  top.gunicorn.hooks.rst  top.gunicorn.hooks.when_ready.rst  top.gunicorn.rst  top.gunicorn.testapp.app.rst  top.gunicorn.testapp.rst  top.gunicorn.testapp.slow_app.rst  top.integration.get_tracker_by_url_config.rst  top.integration.rst  top.redis.rst  top.redis.tracker.RedisTracker.rst  top.redis.tracker.rst  top.rst  top.tui.column.ColumnColourFunction.rst  top.tui.column.TaskColumn.rst  top.tui.column.create_rich_column.rst  top.tui.column.determine_enabled_columns.rst  top.tui.column.rst  top.tui.row.RowColourFunction.rst  top.tui.row.fill_tasks_table.rst  top.tui.row.prepare_row.rst  top.tui.row.rst  top.tui.rst  top.utils.is_localhost_port_listening.rst  top.utils.rst  top.utils.sanitise_string.rst
docs/source/task-top/: about.rst  how-to-integrate.rst  index.rst  installation.rst  usage.rst
docs/source/web-top/: about.rst  demo.rst  gunicorn.rst  how-to-integrate.rst  index.rst  installation.rst  integrations.rst  node.rst  usage.rst
scripts/: gunicorn-example-config.py  long-running-example.py
tests/: conftest.py  sample.json  test_gunicorn.py  test_long_running.py  test_redis.py  test_rest_api.py  test_web_top.py
top/: integration.py  utils.py
top/core/: __init__.py  encoding.py  task.py  tracker.py
top/gunicorn/: __init__.py  example_config.py  hooks.py  testapp.py
top/longrunning/: __init__.py  decorator.py  main.py  task.py
top/redis/: __init__.py  tracker.py
top/restapi/: __init__.py  tracker.py
top/tui/: __init__.py  column.py  row.py
top/web/: __init__.py  colour.py  column.py  country_column.py  emit.py  main.py  noise.py  random_requests.py  task.py  tui.py  web_columns.py
