[tool.poetry]
name = "top-framework"
version = "0.1.1"
description = "Python framework for creating UNIX top like TUI applications easily"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
license = "MIT"
packages = [
    { include = "top" },
]
keywords = ["cli", "UNIX", "TUI"]
homepage = "https://github.com/tradingstrategy-ai/top-framework"
repository = "https://github.com/tradingstrategy-ai/top-framework"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
redispy = "^3.0.0"
textual = "^0.1.18"
dataclasses-json = "^0.5.7"
typer = "^0.6.1"
gunicorn = {version = "^20.1.0", optional = true}
emoji-country-flag = "^1.3.1"

sphinx-sitemap = {version = "^2.2.0", optional = true}
Sphinx = {version = "^5.1.1", optional = true}
furo = {version = "^2022.6.21", optional = true}
sphinx-autodoc-typehints = {version = "^1.16.0", optional = true}
python-lorem = {version="^1.1.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"
psutil = "^5.9.1"
requests = "^2.28.1"


black = "^22.6.0"
flake8 = "^5.0.4"
# https://stackoverflow.com/a/66030875/315168
[tool.poetry.extras]
gunicorn = ["gunicorn", "python-lorem"]
docs = ["Sphinx", "sphinx-sitemap", "sphinx-autodoc-typehints", "furo"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 999

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-s --tb=native"
testpaths = [
    "tests",
]

[tool.poetry.scripts]
web-top = 'top.web.main:app'
random-http-requests = 'top.web.random_requests:main'
